<resources>
    <string name="app_name">IntentsLab</string>
    <string name="start_empty">Empty Intent</string>
    <string name="find">Find</string>
    <string name="attach_intentfilter">Attach IntentFilter</string>
    <string name="detach_intentfilter">Detach IntentFilter</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_entry_editor">Intent extra/Bundle entry</string>
    <string name="general">General</string>
    <string name="intent_action">Intent action</string>
    <string name="intent_categories">Categories:</string>
    <string name="intent_categories_add">Add category</string>
    <string name="intent_data">Intent data (URI)</string>
    <string name="intent_data_type">Data type (MIME)</string>
    <string name="data_type_unspecified">Unspecified</string>
    <string name="data_type_autodetect">Autodetect (file: or content:)</string>
    <string name="intent_package">Package</string>
    <string name="intent_component">Component name (for explicit intents)</string>
    <string name="label_pick">Pick</string>
    <string name="label_clear">Clear</string>
    <string name="no_matching_components_found">No matching components found</string>
    <string name="intent_extras">Extras</string>
    <string name="btn_add">Add</string>
    <string name="type_unsupported">Type unsupported</string>
    <string name="item_name">Name:</string>
    <string name="item_type">Type:</string>
    <string name="item_value">Value:</string>
    <string name="startactivityforresult_no_result">Activity finished without result\nresultCode=%1$d</string>
    <string name="startactivityforresult_got_result">Got activity result</string>
    <string name="startactivityforresult_view_result">View result intent</string>
    <string name="result_intent">Result intent, resultCode = </string>
    <string name="received_broadcast_result">Received broadcast result</string>
    <string name="attach_intent_filter_scanning">Scanning…</string>
    <string name="no_intent_filters_found">No intent filters found</string>
    <string name="filters_filter_test_action">Test action</string>
    <string name="filters_filter_test_categories">Test categories</string>
    <string name="filters_filter_substring_and_insensitive">Match just substring and case insensitively</string>
    <string name="attach_intent_filter_all">All</string>
    <string name="intent_filter_attached">IntentFilter attached</string>
    <string name="pick_recent_task">Pick running task</string>
    <string name="menu_show_boring">Show all</string>
    <string name="menu_hide_boring">Hide boring</string>
    <string name="exclude_item_from_list">Re-include into list</string>
    <string name="restore_item_onto_list">Exclude from list</string>
    <string name="item_excluded_from_list">
        Item excluded from list, use \'show all\' and long press it again to restore it
    </string>
    <string name="item_restored_onto_list">Item re-included</string>
    <string name="all_recent_tasks_excluded">All items has been excluded, use \'show all\' option</string>
    <string name="browse_components">Browse components</string>
    <string name="app_type">App type</string>
    <string name="system_apps">System apps</string>
    <string name="user_apps">User apps</string>
    <string name="component_type">Component type</string>
    <string name="activities">Activities</string>
    <string name="broadcast_receivers">BroadcastReceivers</string>
    <string name="content_providers">Content providers</string>
    <string name="services">Services</string>
    <string name="applications">Applications</string>
    <string name="components">Components</string>
    <string name="permissions">Permissions</string>
    <string name="loading_apps_list">Loading apps list&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="filter_excludes_all_possible_components">Filter is excluding all possible components</string>
    <string name="no_matching_components">There are no components matching to given filter</string>
    <string name="permission_filter">Protection</string>
    <string name="permission_filter_show_all">All</string>
    <string name="permission_filter_show_exported">Exported</string>
    <string name="permission_filter_show_obtainable">Obtainable</string>
    <string name="permission_filter_world_accessible">World accessible</string>
    <string name="permission_filter_normal">Normal</string>
    <string name="permission_filter_dangerous">Dangerous</string>
    <string name="permission_filter_signature">Signature</string>
    <string name="permission_filter_system">System</string>
    <string name="permission_filter_development">Development</string>
    <string name="permission_filter_unexported">Not exported</string>
    <string name="permission_filter_unknown">Unknown permission</string>
    <string name="filter_custom">Custom</string>
    <string name="custom_filter">Custom filter</string>
    <string name="set_custom_filter">Set filter</string>
    <string name="component_info">Component info</string>
    <string name="component_not_found">Component not found</string>
    <string name="component_disabled">Component disabled</string>
    <string name="component_in_disabled_application">Component in disabled application</string>
    <string name="component_not_exported">Component not exported</string>
    <string name="permission_required_title">Permission</string>
    <string name="intent_filters">Intent filters:</string>
    <string name="no_intent_filters">No intent filters</string>
    <string name="unknown_intent_filters">Intent filters unknown (retrieving error)</string>
    <string name="go_to_intent_editor">Go to intent editor</string>
    <string name="package_info">App info</string>
    <string name="metadata_header">Metadata</string>
    <string name="metadata_filter">Having metadata</string>
    <string name="metadata_filter_substring">Substring:</string>
    <string name="view_as_xml_resource">View as XML</string>
    <string name="register_receiver">Register receiver</string>
    <string name="unregister_receiver">Unregister</string>
    <string name="receive_broadcast">Receive broadcast</string>
    <string name="waiting_for_broadcast">Waiting for broadcast&#8230;</string>
    <string name="got_broadcast">Got broadcast</string>
    <string name="received_sticky_broadcast">Received sticky broadcast</string>
    <string name="broadcast_autoedit">Autoedit broadcast</string>
    <string name="broadcast_autoedit_on">Open editor immediately after catching broadcast</string>
    <string name="broadcast_autoedit_off">Wait for notification click to edit non-sticky caught broadcast</string>
    <string name="listening_for_multiple_broadcasts">Listening for multiple broadcasts</string>
    <string name="nothing_received_so_far">Nothing received so far</string>
    <string name="received_broadcasts">Received broadcasts</string>
    <plurals name="n_broadcasts_received_so_far">
        <item quantity="one">1 broadcast received so far</item>
        <item quantity="other">%d broadcasts received so far</item>
    </plurals>
    <string name="stop_listening_for_broadcasts">Stop listening for broadcasts</string>
    <string name="s_after_previous_broadcast">%ds after previous broadcast</string>
    <string name="initial_sticky">Initial sticky</string>
    <string name="flags_changed">Flags changed</string>
    <string name="no_extras">No extras</string>
    <string name="added_extra">Added extra: %s</string>
    <string name="provider_lab">Provider lab</string>
    <string name="provider_rw_world_accessible">Provider read/write world accessible</string>
    <string name="provider_w_only_permission">World readable, write permission</string>
    <string name="provider_rw_permission">Read/write permission</string>
    <string name="provider_r_permission">Read permission</string>
    <string name="provider_no_w_permission">No write permission, <i>probably</i> read-only</string>
    <string name="provider_w_permission">Write permission</string>
    <string name="a_returned_b">%1$s returned %2$s</string>
    <string name="content_providers_permission_type">For content providers check</string>
    <string name="filter_read_permission">Read permission</string>
    <string name="filter_write_permission">Write permission</string>
    <string name="go_to_provider_lab">Go to provider lab</string>
    <string name="method">Method:</string>
    <string name="provider_uri">Uri:</string>
    <string name="specify_projection">Specify projection</string>
    <string name="add_projection_column">Add projection column</string>
    <string name="specify_selection">Specify selection (WHERE):</string>
    <string name="selection_args">Selection args:</string>
    <string name="new_selection_arg">New selection arg</string>
    <string name="content_values">Content values</string>
    <string name="new_content_value_pair">New pair</string>
    <string name="specify_order">Specify order</string>
    <string name="edit_intercepted_result">Edit result</string>
    <string name="forward_intercepted_result">Forward result</string>
    <string name="interception_enabled">Interception enabled</string>
    <string name="interception_disabled">Interception disabled</string>
    <string name="intercept_activity_intents">Intercept activity intents</string>
    <string name="disable_interception">Disable interception</string>
    <string name="activities_not_exported">Activities (Not exported)</string>
    <string name="defined_permissions">Permissions defined by</string>
    <string name="granted_permissions">Granted permissions</string>
    <string name="denied_permissions">Denied permissions</string>
    <string name="implicitly_granted_permissions">Implicitly granted permissions</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_as_name">Name:</string>
    <string name="saved">Saved</string>
    <string name="no_saved_items">No saved items</string>
    <string name="value_parse_error">Parse error</string>
    <string name="show_non_public_fields">Show non-public fields</string>
    <string name="discard_changes">Discard changes</string>
    <string name="discard_changes_confirm">Discard changes?</string>
    <string name="set_to_null">Use null</string>
    <string name="set_to_empty_string">Use empty string</string>
    <string name="finish_editor_and_set_value">Set value</string>
    <string name="wait">Wait</string>
    <string name="description">Description</string>
    <string name="permission_group_name">Group name</string>
    <string name="permission_group_label">Group label</string>
    <string name="permission_group_description">Group description</string>
    <string name="permission_protection_level">Protection level</string>
    <string name="permission_defined_by">Defined by</string>
    <string name="permission_granted_to">Granted to</string>
    <string name="permission_implicitly_granted_to">Implicitly granted to</string>
    <string name="permission_denied_to">Denied to</string>
    <string name="permission_enforcing_components">Components declaratively enforcing this permission</string>
    <string name="proxy_log_empty">Log is empty, long press \"...\" button near \"Data (URI)\" in intent editor field
        and use \"Wrap\" option
    </string>
    <string name="no_components">No components</string>
    <string name="system_services">System services</string>
    <string name="advanced">Advanced</string>
    <string name="creator_constructors">Constructors</string>
    <string name="group_by_applications">Group by applications</string>
    <string name="include_only_with_grant_uri_group">Content provider permission granting</string>
    <string name="include_only_with_grant_uri">Include only providers allowing granting of URI permissions</string>
</resources>