<!--
  ~ IntentsLab - Android app for playing with Intents and Binder IPC
  ~ Copyright (C) 2014 Michał Bednarski
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/system_apps"
        android:icon="@drawable/ic_menu_system_apps"
        android:title="@string/system_apps"/>
    <item
        android:id="@+id/user_apps"
        android:icon="@drawable/ic_menu_user_apps"
        android:title="@string/user_apps"/>
    <item
        android:title="@string/component_type"
        android:id="@+id/simple_filter_component_type">
        <menu>
            <group
                android:id="@+id/xg1"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/activities"
                    android:title="@string/activities"/>
                <item
                    android:id="@+id/broadcasts"
                    android:title="@string/broadcast_receivers"/>
                <item
                    android:id="@+id/services"
                    android:title="@string/services"/>
                <item
                    android:id="@+id/content_providers"
                    android:title="@string/content_providers"/>
                <item
                    android:id="@+id/applications"
                    android:title="@string/applications"/>
                <item
                    android:id="@+id/dummy_component_type"
                    android:title=""
                    android:visible="false"/>
            </group>
        </menu>
    </item>
    <item
        android:title="@string/permission_filter"
        android:id="@+id/simple_filter_permission">
        <menu>
            <group
                android:id="@+id/xg2"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/permission_filter_all"
                    android:title="@string/permission_filter_show_all"/>
                <item
                    android:id="@+id/permission_filter_exported"
                    android:title="@string/permission_filter_show_exported"/>
                <item
                    android:id="@+id/permission_filter_obtainable"
                    android:title="@string/permission_filter_show_obtainable"/>
                <item
                    android:id="@+id/permission_filter_world_accessible"
                    android:title="@string/permission_filter_world_accessible"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/custom_filter"
        android:title="@string/custom_filter"
        android:showAsAction="ifRoom"/>

</menu>