<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_run_intent"
        android:icon="@drawable/ic_action_send"
        android:showAsAction="always"
        android:title="[startActivity]"
        tools:ignore="hardcodedText"/>
    <item
        android:id="@+id/set_editor_result"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="always"
        android:title="@string/finish_editor_and_set_value"/>
    <item
        android:id="@+id/attach_intent_filter"
        android:title="@string/attach_intentfilter"/>
    <item
        android:id="@+id/detach_intent_filter"
        android:title="@string/detach_intentfilter"/>
    <item
        android:id="@+id/component_info"
        android:title="@string/component_info"/>

    <item
        android:id="@+id/save"
        android:title="Save"/>

    <item
        android:id="@+id/track_intent"
        android:title="Track intent"
        android:checkable="true"/>

    <!-- This is for cases if we accidentally break something -->
    <item
        android:id="@+id/disable_interception"
        android:title="@string/disable_interception"/>

    <!--
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
    />
    -->

</menu>