<!--
  ~ IntentsLab - Android app for playing with Intents and Binder IPC
  ~ Copyright (C) 2014 Michał Bednarski
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/interception"
        android:title="@string/intercept_activity_intents"
        android:checkable="true" />
    <item
        android:id="@+id/provider_lab"
        android:title="@string/provider_lab" />
    <item
        android:id="@+id/system_services"
        android:title="@string/system_services" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
</menu>
