<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ IntentsLab - Android app for playing with Intents and Binder IPC
  ~ Copyright (C) 2014 Michał Bednarski
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="autoeditbroadcast"
        android:summaryOff="@string/broadcast_autoedit_off"
        android:summaryOn="@string/broadcast_autoedit_on"
        android:title="@string/broadcast_autoedit" />

    <PreferenceCategory android:title="Developer options" >
        <CheckBoxPreference android:key="forcelegacytabs" android:title="Force legacy tabs"/>
        <CheckBoxPreference
            android:key="use-real-files-in-open-asset-file"
            android:title="Use real files in openAssetFile in assets provider"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>