<!--
  ~ IntentsLab - Android app for playing with Intents and Binder IPC
  ~ Copyright (C) 2014 Michał Bednarski
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_empty"
            android:onClick="startNew"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_recent_task"
            android:onClick="pickFromRecents"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="browseApps"
            android:text="@string/browse_components"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="catchBroadcast"
            android:text="@string/receive_broadcast"
            android:paddingRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"/>

    </LinearLayout>

    <include
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        layout="@layout/saved_items"/>
</LinearLayout>
